modules/ec2.yaml
AWSTemplateFormatVersion: "2010-09-09"

Description: AWS CloudFormation for the test environment's EC2 Jumphost

Parameters:
  EnvironmentType:
    Description: 'Specify the Environment type of the stack.'
    Type: String
    Default: Test
    AllowedValues:
      - Dev
      - Test
      - Prod
    ConstraintDescription: 'Specify either Dev, Test or Prod.'

  KeyPairName:
    Type: String
    Default: "MyKeyName"
    Description: 'Please provide the name'

  EC2AmiID:
    Type: String
    Description: 'The ID of the AMI.'

  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: 'The VPC ID'

  PublicSubnetId1:
    Type: AWS::EC2::Subnet::Id
    Description: 'The Public Subnet ID #1'

Mappings:
  EnvironmentToInstanceType:
    Dev:
      InstanceType: t2.nano
    Test:
      InstanceType: t2.micro
    Prod:
      InstanceType: t2.small

Resources:
  JumpHostInstance:
    Type: AWS::EC2::Instance
    Properties:
      SubnetId: !Ref PublicSubnetId1
      ImageId: !Ref EC2AmiID
      InstanceType: !FindInMap [EnvironmentToInstanceType, !Ref EnvironmentType, InstanceType]
      KeyName: !Ref KeyPairName
      SecurityGroupIds:
        - !Ref JumpHostSecurityGroup
      Tags:
        - Key: Name
          Value: !Join [ ' ', [ !Ref EnvironmentType, Jump Host ] ]

  JumpHostSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !ImportValue vpc-VpcCidr
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !ImportValue vpc-VpcCidr
      VpcId: !Ref VpcId

  JumpHostEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref JumpHostInstance

Outputs:
  JumpHostElasticIP:
    Description: Elastic IP associated with the jump host EC2 instance
    Value: !Ref JumpHostEIP
